# homebins

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
manifests/: hub.toml  nnn.toml  ripgrep.json  ripgrep.toml
scripts/: release
src/: checksum.rs  dirs.rs  home.rs  lib.rs  main.rs  manifest.rs  operations.rs  process.rs  repos.rs  tools.rs
src/manifest/: mod.rs  repo.rs  store.rs  types.rs
src/operations/: apply.rs  install.rs  mod.rs  remove.rs  types.rs  update.rs  util.rs
tests/manifests/: ripgrep.toml  shfmt.toml
