[package]
name = "homebins"
description = "Binaries for your $HOME"
homepage = "https://github.com/lunaryorn/homebins"
repository = "https://github.com/lunaryorn/homebins"
readme = "README.md"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MPL-2.0"
edition = "2018"
version = "0.1.0"
publish = false

[dependencies]
toml = "^0.5"
serde = { version = "^1.0", features=["derive"] }
clap = "^2.33"
anyhow = "^1.0"
fehler = "^1.0"
dirs = "^2.0"
regex = "^1.3"
semver = "^0.10"
tempfile = "^3.1"
url = "^2.1"

[dev-dependencies]
pretty_assertions = "^0.6"
