[package]
name = "homebins"
description = "Binaries for your $HOME"
homepage = "https://github.com/lunaryorn/homebins"
repository = "https://github.com/lunaryorn/homebins"
readme = "README.md"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MPL-2.0"
edition = "2018"
version = "0.0.2"
publish = false

[dependencies]
# Coloured ANSI output
colored = "^1.9"
# CLI interface
clap = "^2.33"

# Manifest format, types and deserialization
toml = "^0.5"
serde = { version = "^1.0", features=["derive"] }
# Download URLs
url = "^2.1"
# Version numbers (not just semver, because we deal with all sorts of versions)
versions = "^1"
# Extract version numbers for command output
regex = "^1.3"
# License expressions
spdx = "^0.3"

# Hash algorithms for checksum verification
hex = "^0.4"
digest = "^0.9"
sha-1 = "^0.9"
sha2 = "^0.9"
blake2 = "^0.9"

# The Error handling shebang
anyhow = "^1.0"
fehler = "^1.0"
thiserror = "^1.0"

# Temp dirs for building
tempfile = "^3.1"
# $HOME and XDG directories
dirs = "^2.0"

[dev-dependencies]
pretty_assertions = "^0.6"
